{{$NEXT}}
  - Fix default sort when the configured locale does not have an alphanumeric collation (e.g. LC_COLLATE=C)
  - Add B/ignore-backups option
  - Add group-directories-first option
  - Add hide and I/ignore options

0.005     2018-10-24 01:10:27 EDT
  - Do tilde expansion with Path::ExpandTilde instead of Path::Tiny

0.004     2017-07-15 18:24:22 EDT
  - Default to current working directory if no directory passed

0.003     2017-07-07 15:03:57 EDT
  - Fix tests to work correctly in different locales

0.002     2017-07-06 15:55:48 EDT
  - Split version sorting out to Sort::filevercmp

0.001     2017-07-06 11:33:31 EDT
  - First release