@@ -3,6 +3,7 @@
   - Add B/ignore-backups option
   - Add group-directories-first option
   - Add hide and I/ignore options
+  - Add indicator-style, p, file-type, and F/classify options
 
 0.005     2018-10-24 01:10:27 EDT
   - Do tilde expansion with Path::ExpandTilde instead of Path::Tiny
